[package]
name = "ess"
version = "0.4.1"
authors = ["C Jones <code@calebjones.net>"]
description = "An s-expression parser targeted at language implementation."
repository = "https://github.com/porglezomp/ess"
documentation = "https://docs.rs/ess"
readme = "README.md"
keywords = ["s-expression", "sexp", "s-exp", "parser"]
license = "Zlib"

[dependencies]
